--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,7 @@ before_script:
 script:
   - python setup.py install
   - coala-ci
-  - pytest
+  - pytest --cov
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
